# dotfiles

./: .Xmodmap  .Xresources  .bash_aliases  .emacs  .ghci  .gitconfig  .gitignore  .gitmodules  .gtkrc-2.0  .skhdrc  .warprc  .xmobarrc  .xprofile  .zshrc  INSTALL.md  INSTALL.sh  compton.conf  yabairc
.davfs2/: davfs2.conf
.fonts/: README.md
.xmonad/: .gitignore  battery.sh  build  log.txt  screenshot-select.sh  screenshot-window.sh  stack.yaml  volume.sh  xmobar.hs  xmonad-txsmith.cabal  xmonad.hs  xmonad.state
.xmonad/icons/: Untitled.xbm  cpu.xbm  mem.xbm  vol.xbm
.xmonad/lib/: Actions.hs  KeyBinds.hs  Layout.hs  Styles.hs  Workspaces.hs
.yubico/: 85-yubikey.rules  authorized_yubikeys  lock.sh  poke.sh
atom/: keymap.cson  snippets.cson
nvim/: .netrwhist  init.vim
scripts/: chowngrp  gpu  mountkey
sublime/Theme - Soda/: Soda Dark 3.sublime-theme  Soda Dark.sublime-theme
sublime/themes/: hsk.tmTheme
vscode/: keybindings.json  settings.json
zsh/: .zshrc
