name:                xmonad-txsmith
version:             0.1.0.0
homepage:            https://github.com/txsmith/dotfiles
license:             BSD3
author:              Thomas Smith
copyright:           2017 Thomas Smith
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      lib
  exposed-modules:     KeyBinds, Styles, Actions
  build-depends:       base >= 4.7 && < 5
                     , xmonad, xmonad-contrib
                     , containers
  default-language:    Haskell2010

executable xmonad
  main-is:             xmonad.hs
  build-depends:       base, xmonad, xmonad-contrib, xmonad-txsmith
  default-language:    Haskell2010
